manifests/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app1
  type: ClusterIP
